--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "katashin",
   "description": "Package example",
   "keywords": ["example"],
-  "license": "MIT"
+  "license": "MIT",
   "publishConfig": {
-    "registry":"https://npm.pkg.github.com"
+    "registry": "https://npm.pkg.github.com"
   }
 }
